Fixed broken layout

--- a/frontend/styles/LittleTree.module.scss
+++ b/frontend/styles/LittleTree.module.scss
@@ -13,17 +13,19 @@
 	}
 	.flag_sentence_1 {
 			position: absolute;
-			top: 2vw;
-			left: 24%;
-			font-size: 2vw;
+			top: 5%;
+			left: 20%;
+			font-size: 1.8rem;
 			text-align: center;
+			font-weight: 800;
 	}
 	.flag_sentence_2 {
 			position: absolute;
-			top: 6vw;
+			top: 14%;
 			left: 35%;
-			font-size: 1.5vw;
+			font-size: 1rem;
 			text-align: center;
+			font-weight: 700;
 	}
 }
 .icon_pic {
